Fix crash after pasting a shape layer into a different document

We shouldn't expect layer->image() being always set when creating
a shape layer. Image may not exist for layers stored in KisMimeData.

BUG:423752